--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,11 @@
 }
 
 body {
+  display: block;
   font-family: "Roboto", sans-serif;
   background-color: var(--white-color);
   color: var(--link-color);
+  margin: 0px;
 }
 
 h1,
@@ -25,15 +27,14 @@ p {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
 ul {
   list-style: none;
   padding: 0;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0;
 }
 
 .link {
@@ -47,7 +48,16 @@ ul {
 }
 
 section {
-  padding: 94px 0;
+  display: block;
+  padding: 60px 0;
+  width: 100%;
+  margin: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  section {
+    padding: 94px 0;
+  }
 }
 
 .visually-hidden {
@@ -74,9 +84,27 @@ section {
 }
 
 .container {
-  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .button {
@@ -185,33 +213,83 @@ section {
 }
 
 .hero {
+  padding: 0px;
+  margin: 0 auto;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-mobile-1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: var(--background-herofoot-color);
+  max-width: 1600px;
+}
+
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-mobile-2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-tablet-1x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-tablet-2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/heroimg.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-desktop-2x.jpg");
+  }
+}
+
+.hero_active {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/heroimg.jpg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: cover;
-  background-color: var(--background-herofoot-color);
-  height: 600px;
-  max-width: 1600px;
+  height: 400px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero_active {
+    height: 600px;
+  }
 }
 
 .hero__title {
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 30px;
-  width: 696px;
-  font-size: 44px;
-  line-height: 1.36;
+  max-width: 360px;
+  font-size: 26px;
+  line-height: 1.6;
   letter-spacing: 0.06em;
   font-weight: 900;
   text-transform: uppercase;
   text-align: center;
   color: var(--white-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.4;
+    letter-spacing: 0.06em;
+    font-weight: 900;
+    max-width: 696px;
+  }
 }
 
 .hero__button {
@@ -231,23 +309,47 @@ section {
 }
 
 .about-list {
-  display: flex;
-  justify-content: center;
+  margin-right: -15px;
+}
+
+@media screen and (min-width: 768px) {
+  .about-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-list {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
 }
 
 .about-list__item {
-  width: 270px;
+  margin-bottom: 30px;
 }
 
 .about-list__item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .about-list__item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-list__item {
+    flex-basis: calc((100% - 4 * 30px) / 4);
+  }
 }
 
 .about-list__box {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 270px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -259,6 +361,7 @@ section {
   line-height: 1.14;
   letter-spacing: 0.03em;
   font-weight: 700;
+  text-align: center;
   text-transform: uppercase;
   color: var(--text-color);
   margin-bottom: 10px;
@@ -271,8 +374,19 @@ section {
   font-weight: 400;
 }
 
-.section--no-padding-top {
-  padding-top: 0;
+@media screen and (max-width: 1999px) {
+  .section--no-padding-top {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section--no-padding-top {
+    display: contents;
+    display: block;
+    padding-bottom: 94px;
+    padding-top: 0px;
+  }
 }
 
 .section__title {
@@ -319,20 +433,53 @@ section {
 
 .section--grey-background {
   background-color: var(--team-background);
+  width: auto;
 }
 
-.team-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    flex-wrap: nowrap;
+  }
 }
 
 .team-list__item {
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
 }
 
-.team-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    margin: 15px;
+    flex-basis: calc((100% - 2 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    flex-basis: calc((100% - 4 * 15px) / 4);
+  }
+  .team-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.team-list_icon {
+  width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list_icon {
+    height: 260px;
+  }
 }
 
 .team-list__wrap {
@@ -399,16 +546,36 @@ section {
 
 .clients-list {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
 }
 
 .clients-list__item {
-  width: 170px;
+  width: 210px;
   height: 92px;
 }
 
-.clients-list__item + .clients-list__item {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .clients-list__item {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    height: 92px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    width: 170px;
+    height: 92px;
+  }
+  .clients-list__item + .clients-list__item {
+    margin-left: 30px;
+  }
 }
 
 .clients-list__link {
@@ -443,24 +610,68 @@ section {
 }
 
 .footer-wrap {
+  flex-direction: column;
   display: flex;
-  align-items: baseline;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-wrap {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-wrap {
+    flex-direction: row;
+    align-items: baseline;
+  }
 }
 
 .footer-contacts {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-contacts {
+    display: block;
+    margin-left: 76px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contacts {
+    display: block;
+    margin-bottom: 0px;
+    margin-left: 0;
+  }
 }
 
 .footer-contacts__logo {
   display: inline-block;
   font-family: Raleway;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.03em;
   font-weight: 700;
   color: var(--white-color);
   text-decoration: none;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contacts__logo {
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    font-weight: 700;
+  }
 }
 
 .footer-contacts__list {
@@ -472,8 +683,20 @@ section {
   color: var(--white-color);
 }
 
+@media screen and (max-width: 767px) {
+  .footer-contacts__list {
+    text-align: center;
+  }
+}
+
 .footer-contacts__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contacts__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .footer-contacts__link {
@@ -497,8 +720,27 @@ section {
 }
 
 .footer-socials {
-  margin-left: 70px;
-  margin-right: 93px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-socials {
+    align-self: baseline;
+    margin-left: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-socials {
+    display: block;
+    margin-left: 70px;
+    margin-right: 93px;
+    margin-bottom: 0px;
+  }
 }
 
 .footer-socials__title {
@@ -548,6 +790,28 @@ section {
   fill: var(--white-color);
 }
 
+.footer-subscribe {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-subscribe {
+    align-self: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-subscribe {
+    align-self: baseline;
+    align-items: flex-start;
+    width: auto;
+  }
+}
+
 .footer-subscribe__title {
   font-size: 14px;
   line-height: 16px;
@@ -560,21 +824,59 @@ section {
 
 .footer-subscribe__wrap {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-subscribe__wrap {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-subscribe__wrap {
+    flex-direction: row;
+  }
 }
 
 .footer-subscribe__email {
-  width: 358px;
+  display: flex;
+  align-items: center;
   height: 50px;
-  left: 815px;
-  top: 2787px;
+  margin-right: 12px;
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  background-color: transparent;
-  padding-left: 16px;
-  outline: none;
-  color: var(--white-color);
+}
+
+@media screen and (max-width: 767px) {
+  .footer-subscribe__email {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-subscribe__email {
+    width: 450px;
+    margin: 0 auto 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-subscribe__email {
+    width: 358px;
+    margin: 0;
+  }
 }
 
 .footer-subscribe-btn {
@@ -587,13 +889,20 @@ section {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: transparent;
-  margin-left: 12px;
   font-family: Roboto;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
   font-weight: 700;
   color: var(--white-color);
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-subscribe-btn {
+    margin-top: 0;
+    margin-left: 12px;
+  }
 }
 
 .footer-subscribe-btn__icon {
@@ -806,11 +1115,28 @@ section {
 .btn-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .btn-list {
+    margin-bottom: 40px;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .btn-list {
+    flex-wrap: nowrap;
+    margin-bottom: 50px;
+  }
 }
 
 .btn-list__item:not(:last-child) {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .btn-list__btn {
@@ -827,21 +1153,40 @@ section {
 }
 
 .examples-list {
-  display: flex;
-  flex-wrap: wrap;
+  margin: -15px;
+}
+
+@media screen and (min-width: 768px) {
+  .examples-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .examples-item {
-  margin-bottom: 30px;
-  max-width: 370px;
+  margin: 15px;
 }
 
-.examples-item:nth-child(n + 7) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) {
+  .examples-item {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+  .examples-item:nth-child(n + 8) {
+    margin-bottom: 0;
+  }
 }
 
-.examples-item:not(:nth-child(3n)) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .examples-item {
+    flex-grow: 1;
+    flex-basis: auto;
+  }
+  .examples-item:nth-child(n + 7) {
+    margin-bottom: 0;
+  }
+  .examples-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
 }
 
 .examples-item__link {
@@ -869,7 +1214,7 @@ section {
   color: var(--white-color);
   background-color: rgba(33, 150, 243, 0.9);
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
@@ -878,6 +1223,18 @@ section {
 .examples-item__link:hover .examples-item__imgtext,
 .examples-item__link:focus .examples-item__imgtext {
   transform: translateY(0);
+}
+
+@media screen and (min-width: 768px) {
+  .examples-item__imgtext {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .examples-item__imgtext {
+    padding: 63px 24px;
+  }
 }
 
 .cardtext {
