--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,23 +1,51 @@
+// .about-list {
+//   @include flexjc-center;
+// }
 .about-list {
-  @include flexjc-center;
+  // margin-bottom: -30px;
+  margin-right: -15px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
 }
 .about-list__item {
-  width: 270px;
+  margin-bottom: 30px;
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 15px;
+  }
+  @media screen and (min-width: 768px) {
+    // margin: 15px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 4 * 30px) / 4);
   }
 }
 .about-list__box {
   @include flexjc-center;
   align-items: center;
-  width: 270px;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
+  // @media screen and (min-width: 768px) {
+  //   width: calc(100% / 2 - 30px);
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   width: calc(100% / 4 - 30px);
+  // }
 }
 .about-list__title {
   @include font(14px, 1.14, 0.03em, 700);
+  text-align: center;
   text-transform: uppercase;
   color: var(--text-color);
   margin-bottom: 10px;
