--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,16 +1,36 @@
 .clients-list {
   display: flex;
-  flex-direction: row;
-}
-.clients-list__item {
-  width: 170px;
-  height: 92px;
-}
-.clients-list__item {
-  & + & {
-    margin-left: 30px;
+  flex-wrap: wrap;
+  // margin-right: -15px;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 }
+
+.clients-list__item {
+  width: 210px;
+  height: 92px;
+  // margin: 15px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    height: 92px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    height: 92px;
+    & + & {
+      margin-left: 30px;
+    }
+  }
+}
+// .clients-list__item {
+//   & + & {
+//     margin-left: 30px;
+//   }
+// }
 .clients-list__link {
   @include flexjc-center;
   align-items: center;
