--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,23 @@
 .container {
-  width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
+  width: 100%;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
+
+// margin: 15px;
+//   flex-basis: calc((100% - 2 * 30px) / 2);
+//   @media screen and (min-width: 768px) {
+//     flex-basis: calc((100% - 3 * 30px) / 3);
+//   }
+//   @media screen and (min-width: 1200px) {
+//     flex-basis: calc((100% - 6 * 30px) / 6);
+//   } и у родителя margin - 15пикс
