--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -1,17 +1,32 @@
 .examples-list {
-  display: flex;
-  flex-wrap: wrap;
+  margin: -15px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .examples-item {
-  margin-bottom: 30px;
-  max-width: 370px;
-  &:nth-child(n + 7) {
-    margin-bottom: 0;
+  margin: 15px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    &:nth-child(n + 8) {
+      margin-bottom: 0;
+    }
   }
-  &:not(:nth-child(3n)) {
-    margin-right: 30px;
+  @media screen and (min-width: 1200px) {
+    flex-grow: 1;
+    flex-basis: auto;
+    &:nth-child(n + 7) {
+      margin-bottom: 0;
+    }
+    &:not(:nth-child(3n)) {
+      margin-right: 30px;
+    }
   }
 }
+
 .examples-item__link {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -32,13 +47,20 @@
   color: var(--white-color);
   background-color: rgba(33, 150, 243, 0.9);
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: auto;
   .examples-item__link:hover &,
   .examples-item__link:focus & {
     transform: translateY(0);
+  }
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
   }
 }
 .cardtext {
