--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -1,7 +1,10 @@
 body {
+  display: block;
   font-family: "Roboto", sans-serif;
   background-color: var(--white-color);
   color: var(--link-color);
+  // overflow-x: hidden;
+  margin: 0px;
 }
 h1,
 h2,
@@ -12,26 +15,35 @@ p {
 }
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 ul {
   list-style: none;
   padding: 0;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  // margin-top: 0px;
+  // margin-bottom: 0px;
+  margin: 0;
 }
 .link {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);&:hover,
-&:focus {
-  color: var(--accent-color);
-  cursor: pointer;
-}
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    cursor: pointer;
+  }
 }
 section {
-  padding: 94px 0;
+  display: block;
+  padding: 60px 0;
+  width: 100%;
+  margin: 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
 .visually-hidden {
   position: absolute;
