--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,36 +1,23 @@
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-  // margin-right: -15px;
-
-  @media screen and (min-width: 1200px) {
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
+  margin: -15px;
 }
 
 .clients-list__item {
-  width: 210px;
+  width: calc((100% - 2 * 30px) / 2);
   height: 92px;
-  // margin: 15px;
+  margin: 15px;
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 3 * 30px) / 3);
-    height: 92px;
+    width: calc((100% - 3 * 30px) / 3);
   }
+
   @media screen and (min-width: 1200px) {
-    width: 170px;
-    height: 92px;
-    & + & {
-      margin-left: 30px;
-    }
+    width: calc((100% - 6 * 30px) / 6);
   }
 }
-// .clients-list__item {
-//   & + & {
-//     margin-left: 30px;
-//   }
-// }
+
 .clients-list__link {
   @include flexjc-center;
   align-items: center;
