--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,135 @@
+// .footer {
+//   background-color: var(--background-herofoot-color);
+//   padding: 60px 0;
+// }
+// .footer-wrap {
+//   display: flex;
+//   align-items: baseline;
+// }
+// .footer-contacts {
+//   flex-grow: 1;
+// }
+// .footer-contacts__logo {
+//   display: inline-block;
+//   font-family: Raleway;
+//   @include font(26px, 1.2, 0.03em, 700);
+//   color: var(--white-color);
+//   text-decoration: none;
+//   margin-bottom: 20px;
+// }
+// .footer-contacts__list {
+//   font-style: normal;
+//   @include font(14px, 1.71, 0.03em, 400);
+//   color: var(--white-color);
+// }
+// .footer-contacts__item {
+//   &:not(:last-child) {
+//     margin-bottom: 9px;
+//   }
+// }
+// .footer-contacts__link {
+//   font-family: inherit;
+//   font-style: normal;
+//   @include font(14px, 1.71, 0.03em, 400);
+//   color: rgba(255, 255, 255, 0.6);
+// }
+// .footer-contacts__link--white {
+//   font-family: inherit;
+//   font-style: normal;
+//   @include font(14px, 1.71, 0.03em, 400);
+//   color: var(--white-color);
+// }
+// .footer-socials {
+//   margin-left: 70px;
+//   margin-right: 93px;
+// }
+// .footer-socials__title {
+//   @include font(14px, 16px, 0.03em, 700);
+//   text-transform: uppercase;
+//   margin-bottom: 20px;
+//   color: var(--white-color);
+// }
+// .footer-socials__list {
+//   display: flex;
+// }
+// .footer-socials__item {
+//   width: 44px;
+//   height: 44px;
+// }
+// .footer-socials__item {
+//   & + & {
+//     margin-left: 10px;
+//   }
+// }
+// .footer-socials__link {
+//   @include flexjc-center;
+//   align-items: center;
+//   width: 100%;
+//   height: 100%;
+//   border-radius: 50%;
+//   background-color: hsla(0, 100%, 100%, 0.1);
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover,
+//   &:focus {
+//     background-color: var(--accent-color);
+//   }
+// }
+// .footer-socials__icon {
+//   fill: var(--white-color);
+//   .footer-socials__link:hover &,
+//   .footer-socials__link:focus & {
+//     fill: var(--white-color);
+//   }
+// }
+// .footer-subscribe__title {
+//   @include font(14px, 16px, 0.03em, 700);
+//   text-transform: uppercase;
+//   margin-bottom: 20px;
+//   color: var(--white-color);
+// }
+// .footer-subscribe__wrap {
+//   display: flex;
+// }
+// .footer-subscribe__email {
+//   width: 358px;
+//   height: 50px;
+//   left: 815px;
+//   top: 2787px;
+//   border: 1px solid rgba(255, 255, 255, 0.3);
+//   box-sizing: border-box;
+//   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//   border-radius: 4px;
+//   background-color: transparent;
+//   padding-left: 16px;
+//   outline: none;
+//   color: var(--white-color);
+// }
+// .footer-subscribe-btn {
+//   @include flexjc-center;
+//   align-items: center;
+//   width: 200px;
+//   height: 50px;
+//   background: #2196f3;
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   border-radius: 4px;
+//   border: transparent;
+//   margin-left: 12px;
+//   font-family: Roboto;
+//   @include font(16px, 30px, 0.03em, 700);
+//   color: var(--white-color);
+// }
+// .footer-subscribe-btn__icon {
+//   fill: var(--white-color);
+//   margin-left: 10px;
+// }
+
 .footer {
   background-color: var(--background-herofoot-color);
   padding: 60px 0;
 }
 .footer-wrap {
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   align-items: center;
 
   @media screen and(min-width: 768px) {
@@ -14,25 +139,25 @@
 
   @media screen and(min-width: 1200px) {
     // flex-wrap: nowrap;
-    flex-direction: row;
+    // flex-direction: row;
     align-items: baseline;
   }
 }
 .footer-contacts {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+
   align-items: center;
   justify-content: center;
   margin-bottom: 60px;
 
   @media screen and (min-width: 768px) {
-    display: block;
     margin-left: 76px;
   }
 
   @media screen and (min-width: 1200px) {
     display: block;
+    flex-grow: 1;
     margin-bottom: 0px;
     margin-left: 0;
   }
@@ -53,16 +178,18 @@
   @include font(14px, 1.71, 0.03em, 400);
   color: var(--white-color);
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1999px) {
     text-align: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: left;
   }
 }
 .footer-contacts__item {
   &:not(:last-child) {
     margin-bottom: 8px;
-  }
-  @media screen and (min-width: 1200px) {
-    &:not(:last-child) {
+    @media screen and (min-width: 1200px) {
       margin-bottom: 9px;
     }
   }
@@ -87,6 +214,7 @@
   margin-bottom: 60px;
 
   @media screen and (min-width: 768px) {
+    display: flex;
     align-self: baseline;
     margin-left: 165px;
   }
@@ -176,7 +304,7 @@
   display: flex;
   align-items: center;
   height: 50px;
-  margin-right: 12px;
+  // margin-right: 15px;
   padding-left: 16px;
   font-size: 16px;
   line-height: 1.25;
@@ -195,7 +323,7 @@
 
   @media screen and (min-width: 768px) {
     width: 450px;
-    margin: 0 auto 20px;
+    // margin: 0 auto 20px;
   }
 
   @media screen and (min-width: 1200px) {
