--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,8 @@
 .hero {
   padding: 0px;
   margin: 0 auto;
+  max-width: 480px;
+  height: 400px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -10,7 +12,6 @@
   background-position: center;
   background-size: cover;
   background-color: var(--background-herofoot-color);
-  max-width: 1600px;
 
   @media screen and (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
@@ -24,11 +25,13 @@
   }
 
   @media screen and (min-width: 768px) {
+    max-width: 768px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url("../images/header-tablet-1x.jpg");
+
     @media screen and (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -42,6 +45,7 @@
   }
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
+    height: 600px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
