--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -10,19 +10,19 @@
   margin: 15px;
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 2 * 30px) / 2);
+    width: calc((100% - 2 * 30px) / 2);
     &:nth-child(n + 8) {
       margin-bottom: 0;
     }
   }
   @media screen and (min-width: 1200px) {
     flex-grow: 1;
-    flex-basis: auto;
-    &:nth-child(n + 7) {
+    width: calc((100% - 3 * 30px) / 3);
+  }
+
+  &:nth-child(n + 7) {
+    @media screen and (min-width: 1200px) {
       margin-bottom: 0;
-    }
-    &:not(:nth-child(3n)) {
-      margin-right: 30px;
     }
   }
 }
