--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,17 +1,11 @@
 .section--grey-background {
-  // padding: 60px;
   background-color: var(--team-background);
-  width: auto;
 }
 .team-list {
-  // margin-right: -15px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    // margin-left: -30px;
-  }
-  @media screen and (min-width: 1200px) {
-    flex-wrap: nowrap;
+    margin: -15px;
   }
 }
 .team-list__item {
@@ -19,27 +13,28 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  // margin-right: 15px;
-  margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
     margin: 15px;
-    flex-basis: calc((100% - 2 * 15px) / 2);
+    width: calc((100% - 2 * 30px) / 2);
   }
 
   @media screen and (min-width: 1200px) {
-    flex-basis: calc((100% - 4 * 15px) / 4);
-    &:not(:last-child) {
-      margin-right: 30px;
+    width: calc((100% - 4 * 30px) / 4);
+  }
+
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
     }
   }
 }
 .team-list_icon {
   width: 100%;
-  // height: 460px;
-  // @media screen and (min-width: 768px) {
-  //   height: 374px;
-  // }
+  height: 460px;
+  @media screen and (min-width: 768px) {
+    height: 374px;
+  }
   @media screen and (min-width: 1200px) {
     height: 260px;
   }
