--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,15 @@ section {
 .container__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   min-height: 60px;
+  position: relative;
+}
+
+@media screen and (max-width: 767px) {
+  .container__header {
+    justify-content: space-between;
+  }
 }
 
 .logo {
@@ -143,7 +150,7 @@ section {
   text-decoration: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .logo {
     margin-right: 88px;
   }
@@ -169,6 +176,17 @@ section {
   padding: 0;
   border: none;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.nav-btn:hover, .nav-btn:focus {
+  fill: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .nav-btn {
+    display: none;
+  }
 }
 
 .nav-btn .icon-cross {
@@ -183,55 +201,148 @@ section {
   display: none;
 }
 
-.nav-list {
-  display: flex;
-  padding-left: 0px;
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--white-color);
+    z-index: 10;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
 }
 
-.nav-list__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-container {
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-list {
+    padding-left: 40px;
+    margin-bottom: 302px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-list {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-list {
+    padding-left: 0px;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-list__item:not(:last-child) {
+    margin-right: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-list__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .nav-list__link {
   display: block;
-  padding: 32px 0;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 40px;
+  line-height: 47px;
   letter-spacing: 0.02em;
   font-weight: 500;
   color: var(--text-color);
   position: relative;
 }
 
+@media screen and (min-width: 768px) {
+  .nav-list__link {
+    padding: 32px 0;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+  }
+}
+
 .nav-list__link--current {
   color: var(--accent-color);
 }
 
-.nav-list__link--current::after {
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: var(--accent-color);
-  border-radius: 2px;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
+@media screen and (min-width: 768px) {
+  .nav-list__link--current::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: var(--accent-color);
+    border-radius: 2px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+  }
 }
 
 .header-contact {
-  margin-left: auto;
   display: flex;
+  margin-left: auto;
 }
 
-.header-contact__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (max-width: 767px) {
+  .header-contact {
+    flex-direction: column-reverse;
+    padding-left: 40px;
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-contact {
+    display: block;
+    margin-left: 84px;
+    margin-bottom: -10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-contact__item {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contact__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .header-contact__link {
   display: flex;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 24px;
+  line-height: 28px;
   letter-spacing: 0.02em;
   font-weight: 500;
   color: var(--link-color);
@@ -243,14 +354,78 @@ section {
   color: var(--accent-color);
 }
 
-.header-contact__icon {
-  fill: var(--link-color);
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .header-contact__link {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+  }
 }
 
-.header-contact__link:hover .header-contact__icon,
-.header-contact__link:focus .header-contact__icon {
-  fill: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .header-contact__link {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-contact__link--mobile {
+    font-size: 34px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    color: var(--accent-color);
+    margin-bottom: 32px;
+  }
+}
+
+.header-contact__icon {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contact__icon {
+    display: block;
+    fill: var(--link-color);
+    margin-right: 10px;
+  }
+  .header-contact__link:hover .header-contact__icon,
+  .header-contact__link:focus .header-contact__icon {
+    fill: var(--accent-color);
+  }
+}
+
+.header-socials {
+  display: flex;
+  padding-left: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-socials {
+    display: none;
+  }
+}
+
+.header-socials__item {
+  color: var(--accent-color);
+}
+
+.header-socials__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header-socials__item:not(:last-child)::after {
+  content: "\007C";
+  color: var(--link-color);
+  padding-left: 10px;
+}
+
+.header-socials__link {
+  color: var(--accent-color);
 }
 
 .hero {
@@ -957,6 +1132,7 @@ section {
   top: 0;
   left: 0;
   transition: opacity 450ms cubic-bezier(0.4, 0, 0.2, 1), visibility 450ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden .modal {
@@ -965,15 +1141,29 @@ section {
 
 .modal {
   padding: 40px;
-  width: 528px;
-  min-height: 581px;
+  top: 65%;
+  left: 50%;
   background-color: var(--white-color);
   border-radius: 4px;
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform: scale(1) skew(0deg) translate(-50%, -50%);
   transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    min-height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+    top: 70%;
+    left: 50%;
+  }
 }
 
 .is-hidden {
@@ -1009,12 +1199,25 @@ section {
   font-family: Roboto;
   font-style: normal;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 30px;
   letter-spacing: 0.03em;
   font-weight: 700;
   text-align: center;
   color: var(--text-color);
   margin-bottom: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0.03em;
+    font-weight: 700;
+  }
+}
+
+.modal-form__wrap {
+  position: relative;
 }
 
 .modal-form__wrap:not(:nth-child(4n)) {
@@ -1027,9 +1230,18 @@ section {
   font-style: normal;
   font-size: 12px;
   line-height: 14px;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.01em;
   font-weight: 400;
   margin-bottom: 4px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__label {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.03em;
+    font-weight: 400;
+  }
 }
 
 .modal-form__box {
@@ -1045,11 +1257,16 @@ section {
   padding-right: 42px;
   padding-left: 42px;
   outline: none;
+  cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form__input:focus {
   border-color: var(--accent-color);
+}
+
+.modal-form__input:focus + .modal-form__icon {
+  fill: var(--accent-color);
 }
 
 .modal-form__icon {
@@ -1058,10 +1275,6 @@ section {
   transform: translateY(-50%);
   left: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__input:focus .modal-form__icon {
-  fill: var(--accent-color);
 }
 
 .modal-form__textarea {
@@ -1103,11 +1316,19 @@ section {
   justify-content: center;
   align-items: center;
   font-family: Roboto;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
+  font-size: 12px;
+  line-height: 14px;
   font-weight: 400;
   color: var(--link-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-terms__text {
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    font-weight: 400;
+  }
 }
 
 .modal-terms__text span {
@@ -1127,7 +1348,6 @@ section {
 }
 
 .modal-terms__link {
-  display: inline-block;
   color: var(--accent-color);
   text-decoration: underline;
 }
@@ -1280,6 +1500,12 @@ section {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .cardtext {
+    height: 145px;
+  }
 }
 
 .cardtext__header {
