--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
   border-bottom: 1px solid #ececec;
+  position: relative;
 }
 .container__header {
   display: flex;
@@ -7,7 +8,7 @@
   justify-content: flex-end;
 
   min-height: 60px;
-  position: relative;
+  // position: relative;
   @media screen and (max-width: 767px) {
     justify-content: space-between;
   }
@@ -29,13 +30,13 @@
     @include font(26px, 1.2, 0.03em, 700);
     margin-right: 93px;
   }
-  // &.is-open {
-  //   color: var(--white-color);
-  // }
 }
 
 .logo-color {
   color: var(--accent-color);
+}
+.logo-hide {
+  color: transparent;
 }
 
 .nav-btn {
@@ -74,10 +75,9 @@
     top: 100%;
     left: 0;
     width: 100%;
-    // height: 796px;
     background-color: var(--white-color);
     z-index: 10;
-
+    overflow-y: skroll;
     &.is-open {
       display: block;
     }
@@ -90,6 +90,10 @@
     justify-content: space-between;
     width: 100%;
   }
+}
+
+.menu-container.is-open + .logo {
+  display: none;
 }
 
 .nav-list {
@@ -158,7 +162,7 @@
   @media screen and (max-width: 767px) {
     flex-direction: column-reverse;
     padding-left: 40px;
-    margin-bottom: 64px;
+    margin-bottom: 30px;
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: block;
@@ -222,6 +226,7 @@
 .header-socials {
   display: flex;
   padding-left: 40px;
+  padding-bottom: 48px;
 
   @media screen and (min-width: 768px) {
     display: none;
