--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -57,6 +57,7 @@
   }
   @media screen and (min-width: 768px) {
     padding: 49px 24px;
+    overflow: hidden;
   }
 
   @media screen and (min-width: 1200px) {
