--- a/sass/components/_portfolio-nav.scss
+++ b/sass/components/_portfolio-nav.scss
@@ -5,7 +5,7 @@
   margin-bottom: 30px;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
     justify-content: center;
   }
   @media screen and (min-width: 1200px) {
