--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -9,8 +9,11 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: var(--white-color);
   color: var(--link-color);
-  // overflow-x: hidden;
   margin: 0px;
+}
+
+.is-scroll {
+  overflow: hidden;
 }
 
 h1,
@@ -52,6 +55,19 @@ section {
 
   @media screen and (min-width: 1200px) {
     padding: 94px 0;
+  }
+}
+
+.section__title {
+  font-family: inherit;
+  @include font(28px, 33px, 0.03em, 700);
+  color: var(--text-color);
+  text-align: center;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    @include font(36px, 1.17, 0.03em, 700);
+    margin-bottom: 50px;
   }
 }
 
