--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,10 @@ section {
     overflow-y: skroll;
   }
   .menu-container.is-open {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
   }
 }
 
@@ -267,7 +270,6 @@ section {
 @media screen and (max-width: 767px) {
   .nav-list {
     padding-left: 40px;
-    margin-bottom: 302px;
   }
 }
 
@@ -436,7 +438,7 @@ section {
 .header-socials {
   display: flex;
   padding-left: 40px;
-  padding-bottom: 48px;
+  padding-bottom: 75px;
 }
 
 @media screen and (min-width: 768px) {
@@ -449,14 +451,16 @@ section {
   color: var(--accent-color);
 }
 
-.header-socials__item:not(:last-child) {
-  margin-right: 20px;
-}
-
 .header-socials__item:not(:last-child)::after {
   content: "\007C";
   color: var(--link-color);
   padding-left: 10px;
+}
+
+@media screen and (min-width: 480px) {
+  .header-socials__item:not(:last-child) {
+    margin-right: 20px;
+  }
 }
 
 .header-socials__link {
